fixed the compare button overflowing the sbom list

--- a/gui/src/app/features/comparison/comparison-page/comparison-page.component.css
+++ b/gui/src/app/features/comparison/comparison-page/comparison-page.component.css
@@ -6,9 +6,13 @@
 
 .content {
   gap: 25px;
-  overflow: hidden;
+  overflow-y: scroll;
   height: 100%;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-shrink: 0;
 }
 
 .content > .header {
@@ -19,6 +23,8 @@
   width: 90%;
   height: fit-content;
   gap: 15px;
+  max-height: calc(100% - 110px); 
+  overflow: hidden;
 }
 
 .selection > .content {
@@ -57,10 +63,11 @@
   height: 100%;
 }
 
-.addSBOMScenter { 
-  position: absolute;
+.addSBOMScenter {
   margin-bottom: 10px;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+}
+
+.dropdown {
+  padding: 10px;
+  width: 100%;
 }
